@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Jun 24 2021 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Nov 30, 2021 --" />
 
         <property name="speciesMappings">
             <map>
